samples/_failures_safe/1761434842_5bedb5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_481d5530.c: In function ‘print_high_severity_logs’:
./samples/SAFE/__tmp_481d5530.c:132:5: error: expected expression at end of input
  132 |     printf("\nHigh Severity Logs (severity >= %d):\n",
      |     ^~~~~~
./samples/SAFE/__tmp_481d5530.c:132:5: error: expected declaration or statement at end of input
